# scheduler

./: Dockerfile  README.Docker.md  README.md  compose.yaml  docker-run.sh
lumus/: .dockerignore  .env.example  Dockerfile  README.md  app.py  pyproject.toml  run.py  start_server.py
lumus/instance/: lumus.db
lumus/lumus/config/: config.py  database.py
lumus/lumus/models/: __init__.py  base.py  course.py  lab.py  schedule.py  student.py  user.py
lumus/lumus/routes/: __init__.py  auth.py  course.py  lab.py  schedule.py  student.py  user.py
lumus/lumus/utils/: __init__.py  auth.py
lumus/migrations/: env.py
lumus/migrations/versions/: 20250711234404_initial_migration_with_sa_user.py  20250711_234404_initial_migration_with_sa_user.py
umbra/: .dockerignore  .env.production  Dockerfile  vite.config.ts
umbra/src/: App.tsx
umbra/src/components/: simple-booking-page.tsx
umbra/src/pages/: LabSelection.tsx
umbra/src/services/: bookingService.ts  lumusService.ts
